2nd fix to pagination remove from behind footer

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -6,15 +6,17 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
-
 }
+
+
+
 .footer {
-  
+  position: absolute;
+  top: 100%;
   bottom: 0;
   width: 100%;
-  /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #904F0B;
   
-  
 }
+
