--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -11,10 +11,10 @@ body {
 .bland-box {
   border: 2px double #904F0B;
   background: transparent;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding: 20px;
-  height: 140px;
+  height: 130px;
   
   
 
@@ -56,6 +56,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: right;
   font-size: 12px;
   color: white;
+
 }
 
 
@@ -63,7 +64,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   display: inline-block;
   margin-top: 1px;
-  margin-bottom: 8px;
+  margin-bottom: 1px;
 
  }
 
@@ -95,6 +96,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   color: #E5D1B3;
   padding: 30px;
+  margin: 0;
 
   
 }
